# agentic-coding-demo

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  epics.md  prompt.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/core/expert/: __init__.py  engine.py  knowledge_base.py  rules.py
backend/app/models/: __init__.py  decision.py  kb_models.py  rule_model.py  sensor_reading.py
backend/app/routers/: decisions.py  knowledge.py  simulator.py
backend/app/schemas/: decision.py  sensor.py
backend/app/services/: expert_service.py  kb_service.py  rule_service.py  simulator.py
backend/tests/: conftest.py  test_api.py  test_expert_engine.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: styles.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: ControlBar.tsx  DecisionCard.tsx  DecisionFeed.tsx  HeroBar.tsx  KpiTile.tsx  RuleEditor.tsx  SensorChart.tsx  SensorGrid.tsx  StatusBadge.tsx  StatusDot.tsx  TabBar.tsx  TimeSeriesPanel.tsx
frontend/src/hooks/: useSensorStream.ts
frontend/src/pages/: Dashboard.tsx  DecisionsTab.tsx  KnowledgeBaseTab.tsx  RulesTab.tsx
frontend/src/types/: index.ts
frontend/tests/: e2e.spec.ts
